# RT_9AIMU

./: .gitignore  CMakeLists.txt  Kalman.c  Kalman.h  README.md  RT_9A_IMU.h  config.c  config.h  gl.py  imu_shm.py  main.c  main.cpp  rt_imu.conf  serial.c  shm_read.c  shm_read.cpp  shm_read2.cpp  shmem.c  shmem.h  start_imud.sh  stop_imud.sh  test_shm_read.c
etc/: rt_imu.conf
include/: Kalman.h  RT_9A_IMU.h  config.h
lib/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  MadgwickAHRS.cpp  MadgwickAHRS.h  MahonyAHRS.cpp  MahonyAHRS.h  butter.cpp  butter.h  butterworth.c  complementary_filter.cpp  complementary_filter.h  my_filter.cpp  my_filter.h  utils.c  utils.h
python/: gl.py  graph.py  graph2.py  imu_shm.py
src/: CMakeLists.txt  Kalman.c  config.c  main.cpp  serial.c  shm_read.cpp  shmem.c  show_data.cpp
